--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build
-        run: GOOS=linux go build -o pensiondata-api github.com/obawi/pensiondata-api/cmd/api
+        run: GOOS=linux go build -ldflags "-s -w" -o pensiondata-api github.com/obawi/pensiondata-api/cmd/api
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
