--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,6 +47,6 @@ jobs:
           switches: -vz --progress
           path: pensiondata-api
           remote_path: ${{ secrets.REMOTE_PATH }}
-          remote_host: ${{ secrets.DEPLOY_HOST }}
-          remote_user: ${{ secrets.DEPLOY_USER }}
-          remote_key: ${{ secrets.DEPLOY_KEY }}
+          remote_host: ${{ secrets.HOST_NAME }}
+          remote_user: ${{ secrets.HOST_USER }}
+          remote_key: ${{ secrets.HOST_KEY }}
